docs: add more documentation configuration for "register" endpoint
