# src/Controller/SecurityController.php
@@ -36,40 +36,8 @@ class SecurityController extends AbstractController
      *
      * @Doc\Response(
      *     response=201,
-     *     description="Registers a new Company",
+     *     description="Company successfully registered",
      *     @Model(type=Company::class)
-     * )
-     * @Doc\Response(
-     *     response=400,
-     *     description="Validation failed",
-     * )
-     * @Doc\Parameter(
-     *     name="body",
-     *     in="path",
-     *     required=true,
-     *     @Doc\JsonContent(
-     *        type="object",
-     *        @Doc\Property(
-     *             type="string",
-     *             property="name",
-     *             description="Company name",
-     *           ),
-     *        @Doc\Property(
-     *             type="string",
-     *             property="password",
-     *             description="Company password",
-     *          ),
-     *        @Doc\Property(
-     *             type="string",
-     *             property="logoUrl",
-     *             description="Company logo",
-     *           ),
-     *        @Doc\Property(
-     *             type="string",
-     *             property="logoAltText",
-     *             description="Company logo alternative text",
-     *           )
-     *     ),
      * )
      * @Doc\Tag(name="Company")
      * @Security(name="Bearer")
